Switch from jsonp to js because if IE :(

--- a/code/gmane/gline.htm
+++ b/code/gmane/gline.htm
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script type="text/javascript" src="gline.jsonp"></script>
+    <script type="text/javascript" src="gline.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
       google.load("visualization", "1", {packages:["corechart"]});
