--- a/code/gmane/gword.htm
+++ b/code/gmane/gword.htm
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <script src="d3.v2.js"></script>
 <script src="d3.layout.cloud.js"></script>
-<script src="gword.jsonp"></script>
+<script src="gword.js"></script>
 <body>
 <script>
   var fill = d3.scale.category20();
