--- a/code/pagerank/force.html
+++ b/code/pagerank/force.html
@@ -3,7 +3,7 @@
   <head>
     <title>Force-Directed Layout</title>
     <script type="text/javascript" src="d3.v2.js"></script>
-    <script type="text/javascript" src="spider.json"></script>
+    <script type="text/javascript" src="spider.js"></script>
     <link type="text/css" rel="stylesheet" href="force.css"/>
   </head>
   <body>
