--- a/code/pagerank/force.html
+++ b/code/pagerank/force.html
@@ -6,7 +6,10 @@
     <script type="text/javascript" src="spider.js"></script>
     <link type="text/css" rel="stylesheet" href="force.css"/>
   </head>
-  <body>
+  <body style="font-family: sans-serif;">
+    <script>
+        document.write("<p>Starting url: "+spiderJson.nodes[0].url+"</p>");
+    </script>
     <div id="chart" style="border:1px"></div>
     <script type="text/javascript" src="force.js"></script>
 	<p>If you don't see a chart above, check the JavaScript console. You may
